--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2018"
 
 [dependencies]
 actix-web = "1.0"
+diesel = { version = "1.0.0", features = ["sqlite"] }
+dotenv = "0.9.0"
+serde = { version = "1.0", features = ["derive"] }
